# entropy_protocol

./: .gitignore  PLAYBOOK.md  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
products/entropy-core/: .env.example  .gitignore  AGENT_NOTES.md  CODEX_LOOP.md  PHASE_HANDOFF.md  PLAYBOOK.md  README.md  RUNBOOK.md  pyproject.toml  pyrightconfig.json
products/entropy-core/docs/: AI_LOOP_OPERATING_MODEL.md  ARCHITECTURE.md  ARTIFACT_SUPPORT_ROADMAP.md  CODEX_PROMPT.md  CORE_12_MONTH_EXECUTION_ROADMAP.md  CORE_V2_ROADMAP.md  DECISION_LOG.md  EVIDENCE_INDEX.md  IMPLEMENTATION_CONTRACT.md  IMPLEMENTATION_JOURNAL.md  PROJECT_BRIEF.md  README.md  audit_task_registry.md  dev-standards.md  spec.md  tasks.md
products/entropy-core/prompts/: ORCHESTRATOR.md  PHASE1_VALIDATOR.md  PROMPT_S_STRATEGY.md
products/entropy-core/templates/: ARCHITECTURE.md  CODEX_PROMPT.md  DECISION_LOG.md  IMPLEMENTATION_CONTRACT.md  NFR.md  PROJECT_BRIEF.md  tasks_schema.md
products/entropy-core/tests/: conftest.py
products/signal-analytics-sandbox/: .env.example  .gitignore  AGENT_NOTES.md  MEMORY.md  ORCHESTRATOR_CHECKPOINT.md  PHASE_HANDOFF.md  PLAYBOOK.md  README.md  RUNBOOK.md  STARTUP_PRESSURE_TEST_RU.md  pyproject.toml  requirements-dev.txt  requirements.txt
products/signal-analytics-sandbox/docs/: AI_DEVELOPMENT_PLAN_RU.md  ANALYST_HANDOFF_RU.md  ARCHITECTURE.md  ARTIFACT_VALIDATION_ROADMAP.md  CI_EVIDENCE_BOUNDARY.md  CODEX_PROMPT.md  DECISION_LOG.md  DEEP_CHANNEL_RETROSPECTIVE_ROADMAP.md  IMPLEMENTATION_CONTRACT.md  IMPLEMENTATION_JOURNAL.md  MULTIMODAL_REPORT_DEVELOPMENT_PLAN.md  PILOT_DEVELOPMENT_LOOP_RU.md  PILOT_LOG.md  PROJECT_BRIEF.md  legal_risk_memo.md  retrieval_eval.md  spec.md  tasks.md
products/signal-analytics-sandbox/hooks/: guard_files.sh  guard_phase_boundary.sh  log_bash.sh  save_checkpoint.sh
products/signal-analytics-sandbox/prompts/: ORCHESTRATOR.md  STRATEGIST.md
products/signal-analytics-sandbox/scripts/: three_channel_media_reviewer.py  three_channel_metric_report.py  three_channel_multimodal_research.py  three_channel_public_probe.py  three_channel_v1_metric_report.py
products/signal-analytics-sandbox/templates/: PROJECT_BRIEF.md  SIMPLIFICATION_REPORT.md
products/signal-analytics-sandbox/tests/: __init__.py  conftest.py  test_workspace_validation.py
products/trader-risk-audit/: .env.example  AGENT_NOTES.md  MEMORY.md  PHASE_HANDOFF.md  PLAYBOOK.md  README.md  RUNBOOK.md  STARTUP_PRESSURE_TEST_RU.md  pyproject.toml  requirements-dev.txt  requirements.txt
products/trader-risk-audit/docs/: AGGREGATE_EVIDENCE_VALIDATION_CLI.md  ARCHITECTURE.md  ARTIFACT_VALIDATION_ROADMAP.md  AUDIT_WORKSPACE_RUNBOOK_RU.md  AUTOMATED_PILOT_ROADMAP.md  BEFORE_AFTER_REPORT_COMPARISON_EN.md  BEFORE_AFTER_REPORT_COMPARISON_RU.md  CODEX_PROMPT.md  CONCIERGE_VALIDATION_EXECUTION_PLAN.md  CONVERSATION_OUTCOME_SCORING_RUBRIC.md  CSV_FRICTION_DECISION_REPORT.md  DECISION_LOG.md  DEMO_CASE_RU.md  DEMO_SCRIPT_EN.md  DEMO_SCRIPT_RU.md  DUNE_PUBLIC_WALLET_REHEARSAL.md  EVIDENCE_INDEX.md  EXCHANGE_API_IMPORT_PLAN_RU.md  EXCHANGE_FIXTURE_POLICY_RU.md  EXCHANGE_IMPORT_GUIDE_EN.md  EXCHANGE_IMPORT_GUIDE_RU.md  FIRST_AUDIT_RUN_SEC_FORM4_EN.md  HYPOTHESIS_EVIDENCE_DASHBOARD_RU.md  HYPOTHESIS_VALIDATION_WITHOUT_PRIVATE_EXPORT_PLAN.md  ICP_DEMO_VARIANTS_EN.md  (+49 more)
(+1731 files in other folders)
