[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entropy-protocol"
version = "0.1.0"
description = "Entropy Protocol project skeleton."
readme = "docs/ARCHITECTURE.md"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "duckdb",
    "opentelemetry-api",
    "polars",
    "pyarrow",
    "pydantic>=2.0",
    "psycopg2-binary",
    "rich",
    "sqlalchemy>=2.0",
    "structlog",
    "typer",
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "ruff",
]

[project.scripts]
entropy = "entropy.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["entropy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
