[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-sandbox"
version = "0.1.0"
description = "Local-first public-source signal analytics sandbox."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "polars",
    "pandas",
    "duckdb",
    "ccxt",
    "yfinance",
    "click",
]

[project.scripts]
signal-sandbox = "signal_sandbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src", "tests"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
