[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "trader-risk-audit"
version = "0.1.0"
description = "Local-first deterministic trader risk audit workflow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "PyYAML>=6,<7",
]

[tool.setuptools.packages.find]
include = ["trader_risk_audit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
